# rust-async-dnssd

./: .gitmodules  Cargo.toml  build.rs
examples/: browse.rs
src/: cstr.rs  error.rs  ffi.rs  future.rs  inner.rs  lib.rs  stream.rs  timeout_stream.rs
src/evented/: mod.rs  unix.rs  windows.rs
src/service/: browse.rs  connection.rs  enumerate_domains.rs  mod.rs  query_record.rs  records.rs  register.rs  resolve.rs  resolve_host.rs
