[package]
name = "async-dnssd"
build = "build.rs"
# also bump version in src/lib.rs
version = "0.4.0"
authors = ["Stefan Bühler <stbuehler@web.de>"]
description = "Asynchronous wrapper for DNS-SD C libraries"
documentation = "https://stbuehler.github.io/rustdocs/async-dnssd/async_dnssd/"
homepage = "https://github.com/stbuehler/rust-async-dnssd"
repository = "https://github.com/stbuehler/rust-async-dnssd"
readme = "README.md"
keywords = ["dnssd", "dns-sd", "mdns", "network", "async"]
license = "MIT"
edition = "2018"


[build-dependencies]
autotools= "0.2.1"
build-deps= "0.1.4"
pkg-config = "0.3.17"


[dependencies]
bitflags = "1.2.1"
futures = "0.3.4"
libc = "0.2.67"
log = "0.4.8"
mio = "0.6"
pin-utils = "0.1.0-alpha.4"
tokio = { version = "0.2.13", features = ["time", "io-driver", "rt-util", "macros", "rt-core"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["winsock2"] }
